<resources>
    <string name="app_name">E-Alumni Surabaya</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">E-Alumni Surabaya</string>
    <string name="nav_header_subtitle">Selamat Datang</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_kiri1">kiri1</string>
    <string name="menu_kiri2">kiri2</string>
    <string name="menu_kiri3">kiri3</string>
    <string name="menu_kiri4">kiri4</string>
    <string name="menu_kiri5">Logout</string>

    <string name="menu_1">Menu1</string>
    <string name="menu_2">Menu2</string>
    <string name="menu_3">Menu3</string>
    <string name="menu_4">Menu4</string>
    <string name="menu_5">Menu5</string>
    <string name="menu_6">Menu6</string>

    <string name="tombol_bawah_1">Bawah1</string>
    <string name="tombol_bawah_2">Bawah2</string>
    <string name="tombol_bawah_3">Bawah3</string>


    <string name="hello_blank_fragment">Assalamuallaikum</string>
    <string name="title_activity_lokasianda_">Location</string>

    <string-array name="kategori">

        <item>Berita</item>
        <item>Kenangan</item>
    </string-array>

    <string-array name="login_sebagai">
        <item>Alumni</item>
        <item>Guru/Karyawan</item>
    </string-array>

    <string-array name="kuliah_atau_kerja">
        <item>- Pilih Data -</item>
        <item>Kuliah</item>
        <item>Kerja</item>
    </string-array>

    <string-array name="swasta_negeri">
        <item>- Pilih Data -</item>
        <item>Swasta</item>
        <item>Negeri</item>
    </string-array>

</resources>
